<resources>
    <string name="app_name">Type</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>

    <string name="document_default_name">Untitled</string>
    <string name="title_activity_editor">EditorActivity</string>
    <string name="title_activity_browser">BrowserActivity</string>
    <string name="folders">Folders</string>
    <string name="files">Files</string>
    <string name="my_drive">My Drive</string>
    <string name="folder">Folder</string>
    <string name="properties">properties</string>
    <string name="now">Now</string>
    <string name="minutes_ago">minutes ago</string>
    <string name="one_hour_ago">1 hour ago</string>
    <string name="hours_ago">hours ago</string>
    <string name="yesterday">Yesterday</string>
    <string name="document_saved">Document saved!</string>
    <string name="file_deleted">File deleted!</string>
    <string name="folder_deleted">Folder deleted!</string>
    <string name="based_on_your_location">Based on your location</string>
    <string name="recent">Recent</string>
    <string name="search_results">Search results</string>
    <string name="login_failed">Login failed</string>
    <string name="settings">Settings</string>
    <string name="words">Words</string>
    <string name="characters">Characters</string>
    <string name="location">Location</string>
    <string name="created">Created</string>
    <string name="modified">Modified</string>
    <string name="save_location_data">Save location data</string>
    <string name="delete">delete</string>
    <string name="search">Search</string>
    <string name="about">About</string>
    <string name="settings_location_description">Automatically save location data to provide location based quick access to documents</string>
    <string name="new_file">New File</string>
    <string name="default_title_file">Untitled file</string>
    <string name="cancel">cancel</string>
    <string name="ok">ok</string>
    <string name="new_folder">New Folder</string>
    <string name="default_title_folder">Untitled Folder</string>
    <string name="increase_indent">Increase indent</string>
    <string name="decrease_indent">Decrease indent</string>
    <string name="text_color">Text color</string>
    <string name="remove">remove</string>
    <string name="select_item">Select item</string>
    <string name="version">Version 1.0</string>
    <string name="developer">by Max Theisen</string>
    <string name="credits_aaa">Some assets were created with Android Asset Studio</string>
    <string name="file">File</string>
    <string name="icon">Icon</string>
    <string name="back">Back</string>
    <string name="profile_cover">Profile Cover Image</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="text_format">Text format</string>
    <string name="location_disabled">Location is disabled!</string>
    <string name="grant_permissions">Please grant all permissions!</string>
</resources>
