<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="280dp"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/dialog_edit_style_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"/>


    <LinearLayout
        android:id="@+id/dialog_edit_style_increase_indent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="?attr/selectableItemBackground"
        android:paddingTop="@dimen/margin">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:src="@drawable/ic_format_indent_increase_black_24dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/increase_indent"
            android:textSize="18sp"
            android:textColor="@color/black"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/dialog_edit_style_decrease_indent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="?attr/selectableItemBackground"
        android:paddingTop="@dimen/margin">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:src="@drawable/ic_format_indent_decrease_black_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/decrease_indent"
            android:textSize="18sp"
            android:textColor="@color/black"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/text_color"
        android:textSize="18sp"
        android:textColor="@color/black"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/margin"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:clipToPadding="false"
        android:clipChildren="false">

        <RadioButton
            android:id="@+id/dialog_edit_style_radio_black"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:button="@drawable/radio_black"
            android:checked="false" />

        <RadioButton
            android:id="@+id/dialog_edit_style_radio_grey"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:button="@drawable/radio_grey"
            android:checked="false"/>

        <RadioButton
            android:id="@+id/dialog_edit_style_radio_red"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:button="@drawable/radio_red"
            android:checked="false"/>

        <RadioButton
            android:id="@+id/dialog_edit_style_radio_amber"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:button="@drawable/radio_amber"
            android:checked="false"/>

        <RadioButton
            android:id="@+id/dialog_edit_style_radio_green"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:button="@drawable/radio_green"
            android:checked="false"/>

        <RadioButton
            android:id="@+id/dialog_edit_style_radio_blue"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:button="@drawable/radio_blue"
            android:checked="false"/>

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/dialog_edit_style_remove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/remove"
            android:textAllCaps="true"
            android:elevation="2dp"
            android:textColor="?attr/colorPrimary"
            style="@style/Base.Widget.AppCompat.Button.Borderless"/>

        <View
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/dialog_edit_style_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:layout_marginBottom="8dp"
            android:text="@string/cancel"
            android:textAllCaps="true"
            android:elevation="2dp"
            android:textColor="?attr/colorPrimary"
            style="@style/Base.Widget.AppCompat.Button.Borderless"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/dialog_edit_style_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/ok"
            android:textAllCaps="true"
            android:elevation="2dp"
            android:textColor="?attr/colorPrimary"
            style="@style/Base.Widget.AppCompat.Button.Borderless"/>

    </LinearLayout>

</LinearLayout>