<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="at.dingbat.type.activity.DetailActivity">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/activity_detail_coordinator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.MainActivity"
        android:fitsSystemWindows="true"
        android:clipChildren="false">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/activity_detail_appbar_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_height"
            android:fitsSystemWindows="true"
            app:theme="@style/ToolbarTheme">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/activity_detail_collapsing_toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:expandedTitleMarginStart="@dimen/title_margin_start"
                app:expandedTitleMarginBottom="@dimen/title_margin_bottom"
                android:fitsSystemWindows="true"
                app:theme="@style/ToolbarTheme">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/activity_detail_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    android:theme="@style/ToolbarTheme"
                    android:popupTheme="@style/AppTheme"
                    app:popupTheme="@style/AppTheme"
                    />

            </android.support.design.widget.CollapsingToolbarLayout>

        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/content_margin"
                android:layout_marginEnd="@dimen/content_margin"
                android:layout_marginTop="@dimen/content_margin_top"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_margin="@dimen/margin">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/settings_item_height"
                        android:orientation="horizontal"
                        android:gravity="center_vertical">

                        <TextView
                            android:layout_width="128dp"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                            android:text="@string/words"
                            android:textColor="@color/black"/>


                        <TextView
                            android:id="@+id/activity_detail_word_count"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                            android:layout_weight="1"
                            android:textColor="@color/black"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/settings_item_height"
                        android:orientation="horizontal"
                        android:gravity="center_vertical">

                        <TextView
                            android:layout_width="128dp"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                            android:text="@string/characters"
                            android:textColor="@color/black"/>


                        <TextView
                            android:id="@+id/activity_detail_character_count"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                            android:layout_weight="1"
                            android:textColor="@color/black"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/settings_item_height"
                        android:orientation="horizontal"
                        android:gravity="center_vertical">

                        <TextView
                            android:layout_width="128dp"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                            android:text="@string/location"
                            android:textColor="@color/black"/>


                        <TextView
                            android:id="@+id/activity_detail_location"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                            android:layout_weight="1"
                            android:textColor="@color/black"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/settings_item_height"
                        android:orientation="horizontal"
                        android:gravity="center_vertical">

                        <TextView
                            android:layout_width="128dp"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                            android:text="@string/created"
                            android:textColor="@color/black"/>


                        <TextView
                            android:id="@+id/activity_detail_created"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                            android:layout_weight="1"
                            android:textColor="@color/black"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/settings_item_height"
                        android:orientation="horizontal"
                        android:gravity="center_vertical">

                        <TextView
                            android:layout_width="128dp"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                            android:text="@string/modified"
                            android:textColor="@color/black"/>


                        <TextView
                            android:id="@+id/activity_detail_changed"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                            android:layout_weight="1"
                            android:textColor="@color/black"/>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/grey"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="4dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/settings_item_height"
                        android:orientation="horizontal"
                        android:gravity="center_vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                            android:text="@string/save_location_data"
                            android:textColor="@color/black"/>


                        <android.support.v7.widget.SwitchCompat
                            android:id="@+id/activity_detail_save_location"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true" />

                    </LinearLayout>

                    <FrameLayout
                        android:id="@+id/activity_detail_map"
                        android:layout_width="match_parent"
                        android:layout_height="200dp">
                    </FrameLayout>

                    <Button
                        android:id="@+id/activity_detail_delete"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/settings_item_height"
                        android:layout_marginTop="@dimen/margin"
                        android:text="@string/delete"
                        android:textColor="@color/red"
                        android:background="?attr/selectableItemBackground" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </android.support.v4.widget.NestedScrollView>

    </android.support.design.widget.CoordinatorLayout>

</FrameLayout>
